# image-campus

./: .gitignore  clase-1.txt  clase-11.txt  clase-12.txt  clase-13.txt  clase-14.txt  clase-15.txt  clase-16.txt  clase-17.txt  clase-18.txt  clase-2.txt  clase-20.txt  clase-21.txt  clase-22.txt  clase-23.txt  clase-24.txt  clase-25.txt  clase-27.txt  clase-28.txt  clase-29.txt  clase-3.txt  clase-30.txt  clase-31.txt  clase-4.txt  clase-5.txt  clase-6.txt  clase-7.txt  clase-8.txt  clase-9.txt
Clase-12/: Clase-12.csproj
Clase-13/: Clase-13.sln
Clase-13/Proyecto-1/: Program.cs  Proyecto-1.csproj
Clase-14/: Clase-14.sln
Clase-14/Ejercicio-1/: Ejercicio-1.csproj  Program.cs  Star.cs
Clase-14/Project-1/: Chair.cs  Material.cs  Program.cs
Clase-16/: Clase-16.sln
Clase-16/Ejercicio-1/: ElectronicDevice.cs  Program.cs  TV.cs
Clase-2/: Clase2.sln
Clase-20/: Clase-20.sln
Clase-3/: Clase_3.sln
Clase-4/: Clase-4.sln
Clase-4_Remakes/: Clase-4_Remakes.sln
Clase-6/: Clase-6.sln
Clase-8/: Clase-8.sln
Clase_5/: Clase_5.sln
Class-27/: Game.sln
Evaluacion-2/: Evaluacion-2.sln
Evaluacion-II/: Evaluacion-II.sln
Game/: Game.sln
GameFinal/: GameFinal.sln
Practica-11/: Practica-11.sln
Snake/: Snake.sln
SopaLetras/: CMakeLists.txt  globals.h  main.cpp  main.h  structs.h  tematicas.h  utiles.cpp  utiles.h
SopaLetras/src/: main.cpp  structs.h  utils.cpp
SopaLetrasCMake/: CMakeLists.txt
SopaLetrasCMake/SopaLetrasCMake/: CMakeLists.txt  SopaLetrasCMake.cpp  SopaLetrasCMake.h  structs.h  utils.cpp  utils.h
SopaLetrasVS/: SopaLetrasVS.sln
(+128 files in other folders)
