# CMakeList.txt : CMake project for SopaLetrasCMake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (SopaLetrasCMake "SopaLetrasCMake.cpp" "SopaLetrasCMake.h" "utils.h" "utils.cpp" "structs.h")

# TODO: Add tests and install targets if needed.
